fix(popup): apply consistent spacing
Corrects inconsistent use of padding and margin
that results in broken UI without headers / search.

--- a/assets/diagram-js.css
+++ b/assets/diagram-js.css
@@ -534,7 +534,6 @@ marker.djs-dragger tspan {
   position: absolute;
 
   box-shadow: 0px 2px 10px var(--popup-shadow-color);
-  padding-top: 12px;
   min-width: 120px;
   outline: none;
 }
@@ -559,7 +558,7 @@ marker.djs-dragger tspan {
   display: flex;
   align-items: stretch;
   line-height: 20px;
-  margin: 0 12px 10px 12px;
+  margin: 10px 12px 10px 12px;
 }
 
 .djs-popup-header .entry {
@@ -603,7 +602,7 @@ marker.djs-dragger tspan {
 }
 
 .djs-popup-results {
-  margin: 0 3px 7px 12px;
+  margin: 7px 3px 7px 12px;
   list-style: none;
   max-height: 280px;
   overflow: overlay;
